# 7IADT-tech-challenge-fase-5

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
dataset/: build_dataset.py  generate_synthetic.py
dataset/icons/: README.md
docker/: Dockerfile.api  Dockerfile.app
docs/: decisao-arquitetura.md  development-flow.md
scripts/: download_weights.py  extract_eval_figures.py
src/strideai/api/: main.py
src/strideai/core/: models.py
src/strideai/detection/: annotate.py  detector.py
src/strideai/report/: generator.py  llm_writer.py  template_writer.py
src/strideai/report/templates/: report.md.j2
src/strideai/stride/: engine.py  kb.py  knowledge_base.yaml
tests/: test_annotate.py  test_api.py  test_build_dataset.py  test_detector.py  test_engine.py  test_generate_synthetic.py  test_generator.py  test_kb.py  test_llm_writer.py  test_models.py  test_template_writer.py
tests/integration/: test_eval_figures.py
training/: README.md  RESULTS.md  train.py
