[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "strideai"
version = "0.1.0"
description = "AI-powered STRIDE threat modeling from architecture diagram images"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "anthropic>=0.40",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "pillow>=10.0",
    "numpy>=1.26",
    "ultralytics>=8.3",
    "streamlit>=1.35",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "pymupdf>=1.24",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"strideai.stride" = ["*.yaml"]
"strideai.report" = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = ["integration: full-pipeline tests that need trained weights and fixture images"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
